fixed issues making app not responsive when questions are too long

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ main {
   justify-content: center;
   flex-direction: column;
   margin: auto;
-  padding: 20px 0 0;
+  padding: 20px 0 20px;
 }
 
 @media (min-width: 1440px) {
